--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "react-native-simple-toast": "^1.1.3",
     "react-native-smart-tip": "^2.3.0",
     "react-native-snackbar": "^2.4.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-uri": "^1.2.3",
+    "react-native-swipe-down": "^1.0.4",
     "react-native-toast-message": "^1.4.9",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
