--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@use-expo/font": "^2.0.0",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.1.2",
-    "expo-image-picker": "~10.1.4",
+    "expo-image-picker": "^10.1.4",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
@@ -48,6 +48,7 @@
     "react-navigation": "^4.3.5",
     "react-navigation-drawer": "^2.4.9",
     "react-navigation-stack": "^2.3.9",
+    "react-redux": "^7.2.4",
     "rn-instagram-image": "^1.0.2"
   },
   "private": true
