--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~41.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-image-picker": "^10.1.4",
+    "expo-linear-gradient": "^9.2.0",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
@@ -49,7 +50,8 @@
     "react-navigation-drawer": "^2.4.9",
     "react-navigation-stack": "^2.3.9",
     "react-redux": "^7.2.4",
-    "rn-instagram-image": "^1.0.2"
+    "rn-instagram-image": "^1.0.2",
+    "socket.io-client": "^4.1.3"
   },
   "private": true
 }
