--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-custom-toast": "^1.0.4",
     "react-native-gallery-swiper": "^1.26.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.36.2",
     "react-native-image-picker": "^4.0.6",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-in-app-message": "^1.0.32",
@@ -53,5 +54,10 @@
     "rn-instagram-image": "^1.0.2",
     "socket.io-client": "^4.1.3"
   },
-  "private": true
+  "private": true,
+  "name": "mobile",
+  "version": "1.0.0",
+  "devDependencies": {
+    "@babel/core": "^7.9.0"
+  }
 }
